--- a/nav.css
+++ b/nav.css
@@ -61,3 +61,9 @@ a:visited {
 a:hover {
     color:red;
 }
+
+@media (max-width: 600px) {
+    .logo {
+        display: none;
+    }
+}
